# gesim_experiment

./: .gitignore  README.md  calculate_scores.py  calculate_similarities.py  compare_calculation_time.ipynb  lbvs_analysis.ipynb  lbvs_calculate_similarities.py  prepare_dataset.ipynb  prepare_dataset.py  pyproject.toml  ss_analysis.ipynb  ss_calculate_multi_assay.py  ss_calculate_single_assay.py  ss_sdf2smi.py  workspace.ipynb
data/: zinc20_1k_random_sample.smi
